--- a/Report/report_v3.tex
+++ b/Report/report_v3.tex
@@ -22,30 +22,18 @@
 	
 		\section{Abstract} % Numbered section
 	
-	This paper outlines the results of a validity test we have conducted on the Fama and French (1993) three-factor model on eligible stocks listed in NYSE, NASDAQ and AMEX for the period between July 2011 to December 2018. 
-	
-	Data on monthly stock returns, monthly 1-month T-bill yields and annual company fundamentals were obtained for the specified period in order to replicate the study. The monthly excess returns suggest that larger-sized companies (i.e. Big-sized) have higher excess returns than portfolios containing smaller sized firms on an average. On the other hand, portfolio constructed of low book-to-market ratio firms look to perform better than those constructed of high book-to-market ratio firms. Quintiles, i.e. twenty-five portfolios, are constructed in accordance to size and book-to-market ratio to help explain the variations on excess portfolio returns by using market risk factor, size risk factor and book-to-market ratio risk factors. After conducting some analysis and statistical tests, we have arrived at the conclusion that size factor has no effect on portfolios of big-size firms but can explain the excess return variations on portfolios of small and medium-sized firms. On the other hand, book-to-market ratio factor has an effect on portfolios of high book-to-market ratio firms. Therefore, we have concluded that Fama French model only has explanatory power over portfolios of several characteristics, but do not help to explain the whole market as a whole during the period spanning from Jul 2011 – Dec 2018.
+	This paper outlines the results of a validity test we have conducted on the Fama and French (1993) three-factor model on eligible stocks listed in NYSE, NASDAQ and AMEX for the period between July 2011 to December 2018. Data on monthly stock returns, monthly 1-month T-bill yields and annual company fundamentals were obtained for the specified period in order to replicate the study. The monthly excess returns suggest that larger-sized companies (i.e. Big-sized) have higher excess returns than portfolios containing smaller sized firms on an average. On the other hand, portfolio constructed of low book-to-market ratio firms look to perform better than those constructed of high book-to-market ratio firms. Quintiles, i.e. twenty-five portfolios, are constructed in accordance to size and book-to-market ratio to help explain the variations on excess portfolio returns by using market risk factor, size risk factor and book-to-market ratio risk factors. After conducting some analysis and statistical tests, we have arrived at the conclusion that size factor has no effect on portfolios of big-size firms but can explain the excess return variations on portfolios of small and medium-sized firms. On the other hand, book-to-market ratio factor has an effect on portfolios of high book-to-market ratio firms. Therefore, we have concluded that Fama French model only has explanatory power over portfolios of several characteristics, but do not help to explain the whole market as a whole during the period spanning from Jul 2011 – Dec 2018.
 	
 	
-	\section{Introduction} % Numbered section
+	\section{Introduction \& Literature Review} % Numbered section
 	
-	The emergence of Modern Portfolio Theory by Markowitz (1952) has set the foundation for portfolio management research, and at the same time incited several research papers with such focus, like Capital Asset Pricing Model (CAPM) developed by Sharpe (1964) and Lintner (1965). Citing CAPM as an example, it aims to explain the stock returns using excess market returns as the only risk factor by using the covariance of portfolio returns with the market portfolio return to explain the variations in each of the portfolio excess returns. However, Fama and French think otherwise and proceeded to prove that covariance has little or no power in terms of explaining cross-sectional variations in equity returns. \\
+	The emergence of Modern Portfolio Theory introduced by Markowitz (1952) has set the foundation for portfolio management research, and has spurred an outpouring of research of a similar focus. The Capital Asset Pricing Model (CAPM) developed by harpe (1964), Lintner (1965) and Black (1972) is a result of such an outpouring. The CAPM attempts to explain stock returns using excess market returns as an all-encompassing risk factor, an idea which was quickly popularised, but has since been met with much scrutiny and many empirical contradictions. Amongst the critics of the CAPM are Fama and French (1993), who have built a case arguing that market excess returns alone do not fully explain cross-sectional variations in equity returns and that the addition of two empirically-backed factors are better explaining said variations. The model is also known as the Fama and French (1993) three-factor model:
 	
-	\noindent Therefore, Fama and French set this as a motivation, and proceeded to add in another two more risk factors, i.e. difference in the excess returns between Small and Big market capitalization sizes (SMB, Small Minus Big) and difference in the excess returns between High and Low book-to-market (High Minus Low, HML), in the original CAPM hoping to help address any initial anomalies introduced by the former. The results of this paper are encouraging as it proves that Fama and French 3 factor model has much higher explanatory power than the CAPM model but there still exists several drawbacks. The below displays the Fama and French model: \\
-	
-	\noindent $$
+	$$
 	R(t) - R_f(t) = a+ b(R_{mkt} - R_f) + s(SMB) + h(HML) +\epsilon_i
-	$$ \\
+	$$
 	
-	
-	\noindent In recent times, there have been several motivations to add other risk factors into the original Fama and French model, which Fama and French extending the model by suggested profitability, i.e. RMW (Robust Minus Weak), and investment, i.e. CMA (Conservative Minus Aggressiveness). In addition, there have been several calls by the market to add in risk factors such as momentum and low-volatility as part of the model. \\
-	
-	\noindent Therefore, we are inspired to prove that the Fama and French 3 factors doesn’t help to explain the excess returns in the modern days, i.e. from Jul 2011 – Dec 2018, as well, and further encourages us to extend the original 3 factor Fama French Model; Furthermore, we have proceeded to setup the following hypothesis for our research purpose: {\textit{The three stock-market factors suggested by Eugene F. Fama and Kenneth R. French in their 1993 paper titled “Common Risk Factors in the Returns on Stocks and Bonds” do not significantly explain the returns of stocks listed on the NYSE, NASDAQ and AMEX for the period between Jul 2011 – Dec 2018.}}
-	
-	
-	\section{Literature Review} % Numbered section
-	
-	The three-factor model introduced by Fama and French (1993) has come a long way in shaping views about drivers of stock returns in academia and in practice. On top of the market $\beta$ factor proposed and popularised by Sharpe (1964), Lintner (1965) and Black (1972) in their Capital Asset Pricing Model (CAPM), Fama and French (1993) proposed two additional and empirically-backed factors for the explanation of stock returns: Size (ME) and Book-to-Market Equity (BE/ME). \\
+	\noindent The three-factor model introduced by Fama and French (1993) has come a long way in shaping views about drivers of stock returns in academia and in practice. On top of the market $\beta$ factor proposed and popularised by Sharpe (1964), Lintner (1965) and Black (1972) in their Capital Asset Pricing Model (CAPM), Fama and French (1993) proposed two additional and empirically-backed factors for the explanation of stock returns: Size (ME) and Book-to-Market Equity (BE/ME). \\
 	
 	\noindent The three-factor model was proposed in response to several discovered empirical contradictions to the CAPM highlighted in Fama and French (1992a). For one, Banz (1981) found that Size (proxied by Market Equity, or ME) adds explanatory power to cross-sectional average returns provided by market $\beta$s. Also, Bhandari (1988) found a positive relationship between firm leverage and average stock returns. To add, Rosenberg, Reid and Lanstein (1985) and Stattman (1980) discovered a positive relationship between Book-to-Market Equity and average U.S. stock returns. Further, Basu (1983) found that earning-price ratios (E/P) help in the explanation of cross-sectional U.S. stock returns when used in conjunction with size and market $\beta$ factors. These findings contradict the viewpoint that market $\beta$s alone are sufficient in describing cross-sectional expected stock returns. \\
 	
@@ -60,39 +48,44 @@
 	\noindent With all that said, the three-factor model is not without its criticisms. For instance, Daniel and Titman (1997) argued that it is the firm characteristics (e.g. region, industry, related lines of business etc), not the covariance structure of returns that actually explain the cross-sectional variation in stock returns. Daniel and Titman (1997) discovered that, once firm
 	characteristics were controlled for, expected returns did not seem to be positively related to Market, SMB and HML loadings. The study was conducted for returns over 20.5 years between July 1973 to December 1993. Davis, Fama and French (2000), however, rebutted with their own findings with a higher-powered test, owing to a longer test period of 68 years between July 1929 and June 1997.\\
 	
-	\noindent Further, a plethora of subsequent studies successfully replicating the insights obtained from Fama and French (1993) for different regions and for different time periods have lent further credence to the notion that the Size and Book-to-Market Equity factors are indeed viable additions to the Market factor as explainers of stock returns. We seek to be able to further support the notion for stocks traded on the NYSE, Amex and NASDAQ for the period between July 2011 and December 2018.\\
+	\noindent Further, a plethora of subsequent studies successfully replicating the insights obtained from Fama and French (1993) for different regions and for different time periods have lent further credence to the notion that the Size and Book-to-Market Equity factors are indeed viable additions to the Market factor as explainers of stock returns.\\
 	
+	\noindent In recent times, there have been motivations to add more risk factors onto the original Fama and French (1993) three-factor model. Fama and French (2015) extended their original three-factor model by suggesting two additional factors: profitability (Robust Minus Weak, RMW), and investment, (Conservative Minus Aggressive, CMA). There have also been several calls elsewhere to add other risk factors such as momentum and low-volatility as part of the original three-factor model. \\
+	
+	\noindent Regardless, we are inspired to validate the original Fama and French (1993) three-factor model, albeit in a more modern time, between July 2011 to December 2018. As such, our research null hypothesis is as follows:\\
+	
+	``\textit{The three stock-market factors suggested by Eugene F. Fama and Kenneth R. French in their 1993 paper titled “Common Risk Factors in the Returns on Stocks and Bonds” do not significantly explain the returns of stocks listed on the NYSE, NASDAQ and AMEX for the period between July 2011 and December 2018.}" \\
+
+	\noindent which if disproved, further validates the findings of Fama and French (1993), even in today's age.
+	
+\newpage
 		
-\section{Data}
-\subsection{Research Sample}
-\noindent Our data sample includes all the stocks listed on the NYSE, NASDAQ and AMEX for the period between July 2011 to December 2018.And we use monthly data to calculate return.
-\subsection{Data Source: Warton Research Data Services(WRDS)}
-Wharton Research Data Services (WRDS) provides the leading business intelligence, data analytics, and financial research platform to global institutions, in which enables comprehensive thought leadership, historical analysis, and insight into the latest innovations in academic research.\\
-And WRDS provides us with the following sub-database which we can utilize:
-\begin{itemize}
-	\item Center for Research in Security Prices(CRSP)
-	\item Compustat-Capital IQ
-	\item CRSP/Compustat Merged(CCM)
-\end{itemize}
-\subsubsection{CRSP}
-\noindent The Center for Research in Security Prices (CRSP) maintains the most comprehensive collection of security price, return, and volume data for the NYSE, AMEX and NASDAQ stock markets. Additional CRSP files provide stock indices, beta-based and cap-based portfolios, treasury bond and risk-free rates, mutual funds, and real estate data.\\
+\section{Data, Research Design \& Methodology}
+\noindent \textbf{Research Sample}\\
+\noindent Our data sample includes data on all eligible stocks listed on the NYSE, NASDAQ and AMEX for the period between July 2011 to December 2018. Monthly data was used to calculate factor realisations and portfolio returns.\\
 
-\noindent And what we need is the monthly closing stock price, number of shares outstanding and returns of all US stocks. We use PERMCO, PERMNO as identifiers when we extract data from the databases.
-\subsubsection{Compustat}
-\noindent We extract total stockholders' equity, deferred taxes, investment tax credit and preferred stock relevant information from this database. And further more we calculated Book Equity(BE) and Market Equity Value(ME) along with the BE/ME in this step. And we use GVKEY as the unique identifiers.
-\subsubsection{CCM}
-\noindent The official CRSP/Compustat Merged Database (CCM) is comprised of CRSP and Compustat data together with the link and link-history references between these two databases. It includes Standard \& Poor's Compustat data, reformatted into CRSP's propreitary CRSPAccess database format, plus additional data tables that map the CRSP permanent company and security identifiers (PERMCO and PERMNO, respectively) to the COMPUSTAT permanent company identifier (GVKEY).\\
+\noindent \textbf{Data Source: Wharton Research Data Services (WRDS)}\\
+Wharton Research Data Services (WRDS) provided us with the following necessary databases Fama and French (1993) utilised in their original study: Center for Research in Security Prices (CRSP), Compustat - Capital IQ and the CRSP/Compustat Merged Database (CCM). \\
 
-\noindent A common misconception is that CCM is CRSP stock market data merged with Compustat accounting data. This is not the case. CCM contains only Compustat data items, but can be searched by CRSP's PERMNO and PERMCO in addition to Compustat's GVKEY. Merging this data with the CRSP stock data requires an additional step. So we use CCM to obtain entity level matching data, then raw data was obtained from standalone datasets. New identifier GVKEY PERMCO was created for purposes of traversing between datasets.
-For example, if Apple Inc’s GVKEY is 1690 and its PERMCO is 7, its GV KEY PERMCO is 16907, which is a unique identifier.
+\noindent \textbf{Center for Research in Security Prices (CRSP)}\\
+\noindent The Center for Research in Security Prices (CRSP) provided us with relevant data on the monthly closing price, returns and outstanding number of eligible stocks. We used PERMCOs and PERMNOs as unique entity and issue identifiers when navigating the CRSP database.\\
 
-\subsection{Factor construction}
+\noindent \textbf{Compustat - Capital IQ}\\
+\noindent Compustat provided us with relevant data on total stockholders' equity, deferred taxes, investment tax credit and the book value of preferred stock. We used GVKEY as unique entity-level identifiers when navigating the Compustat database.\\
+
+\noindent \textbf{CRSP/Compustat Merged Database (CCM)}\\
+\noindent A common misconception is that the CCM database has seamlessly merged CRSP stock market data with Compustat accounting data. We found that this is not the case. The CCM database merely allows for Compustat-included data items to be searched for and linked with CRSP's PERMNO and PERMCO at the issue and entity level respectively, though it was found that GVKEYs and PERMCOs are not exclusive to each other. This means that a GVKEY may correspond to many PERMCOs and vice versa. \\
+
+\noindent Thus, obtaining a complete data link between CRSP and Compustat data required an additional step of creating a new, truly unique entity-level identifier. A new identifier called "GVKEY PERMCO" was created for purposes of traversing between datasets.
+For example, if Apple Inc’s GVKEY is 1690 and its PERMCO is 7, its GV KEY PERMCO is 16907, which is a unique identifier. Eventually, the CCM was used only for purposes of matching GVKEYs to PERMCOs, then raw data was obtained from standalone datasets.\\
+
+\noindent \textbf{Factor Construction}\\
 $$
 R_{i_t}-R_{f_t}=\alpha_{it}+b_{it}(R_{M_t}-R_{f_t})+s_{i_t}(SMB)+h_{i_t}(HML)+\epsilon_{i_t}
 $$
-\subsubsection{Rm-Rf}
-The excess portfolio return in month t, $(R_{M_t}-R_{f_t})$, is the excess market portfolio return in month t. In this study, we construct our own market portfolio to estimate the market return.Additionally 1-month T-bill rates are used as a proxy for the risk free rate.
-\subsubsection{SMB and HML}
+\textbf{Rm-Rf}\\
+The excess portfolio return in month t, $(R_{M_t}-R_{f_t})$, is the excess market portfolio return in month t. In this study, we construct our own market portfolio to estimate the market return.Additionally 1-month T-bill rates are used as a proxy for the risk free rate.\\ \\
+\textbf{SMB and HML}\\
 \noindent For each month SMB is the difference between the average of the returns on the three small-stock portfolios (S/L, S/M and S/H) and the average of the returns on the three big stock portfolios (B/L, B/M and B/H).
 $$
 SMB=[(S/L+S/M+S/H)-(B/L+B/M+B/H)]/3
@@ -101,34 +94,19 @@ HML is the difference between the average of the returns on the two high-BE/ME p
 $$
 HML = [(S/H+B/H)–(S/L+B/L)]/2
 $$
+\noindent \\ \textbf{Regression variable generation: 25 portfolios' return}\\
+After the construction of SMB and HML portfolios for independent regression variables, 25 portfolios are constructed with a similar procedure in order to calculate excess portfolio returns for each month. All  stocks used in the analysis are sorted by size and distributed into five groups (s1 to s5) such that each group contains the correspounding quantile portfolio's return respect to SIZE and s1 contains stocks with smallest market cap, s5 with the biggest ones. Moreover, stocks are independently allocated to another five groups (b1 to b5) based on the book-to-market equity (BE/ME). 25 portfolios are constructed as the intersection of the five size groups and five BE/ME groups. For example, s5/b1 portfolio is constructed by the stocks in the biggest fifth of firms and the lowest fifth of BE/ME ratio.\\ 
 
-\subsubsection{Regression variable generation: 25 portfolios' return}
-After the construction of SMB and HML portfolios for independent regression variables, 25 portfolios are constructed with a similar procedure in order to calculate excess portfolio returns for each month. All  stocks used in the analysis are sorted by size and distributed into five groups (s1 to s5) such that each group contains the correspounding quantile portfolio's return respect to SIZE and s1 contains stocks with smallest market cap, s5 with the biggest ones. Moreover, stocks are independently allocated to another five groups (b1 to b5) based on the book-to-market equity (BE/ME). 25 portfolios are constructed as the intersection of the five size groups and five BE/ME groups. For example, s5/b1 portfolio is constructed by the stocks in the biggest fifth of firms and the lowest fifth of BE/ME ratio.
-
-\subsection{Other Issues in Data}
+\noindent \textbf{Issues in/Limitations of the Databases}
 \begin{itemize}
-	\item Missing Data: E.g. No returns data available when it should be
-	\item Incomplete Dataset: CRSP \& Compustat do not cover the whole population of NYSE, NASDAQ and Amex traded stocks, only an overlap is available
-	\item Repeat Data: Double reporting of same company for same period
-	\item Conflicting Data: Standalone CRSP \& Compustat vs. CCM
-	\item Computational Cost: Takes hours to compute several million cells	
+	\item Missing Data: E.g. No returns data available when there should be
+	\item Incomplete Dataset: CRSP \& Compustat do not cover the whole population of NYSE, NASDAQ and Amex traded stocks, only an overlap of the two datasets is available (only LS, LC and LU CCM-linked data was used)
+	\item Repeat Data: Multiple reporting of same company for same period, these companies were excluded out of the sample
+	\item Conflicting Data: Standalone CRSP \& Compustat vs. CCM reported different numbers, standalone data readings were deferred to
+	\item Computational Cost: Takes hours to compute several million cells due to hardware limitations
 \end{itemize}
+
 \newpage
-
-\subsection{Final Data Demonstration}
-\begin{figure}[ht]
-	\centering
-	\includegraphics[scale=0.5]{1.png}
-	\caption*{25 Portfolios}
-	\label{fig:label}
-\end{figure}
-\begin{figure}[ht]
-	\centering
-	\includegraphics[scale=0.47]{2.png}
-	\caption*{3 Factors}
-	\label{fig:label}
-\end{figure}
-
 
 \section{Summary of Statistics}
 \subsection{The explanatory variables}
