Updating abstract conclusion biblio

--- a/Report/report_v4.tex
+++ b/Report/report_v4.tex
@@ -22,7 +22,7 @@
 	
 		\section{Abstract} % Numbered section
 	
-	This paper outlines the results of a validity test we have conducted on the Fama and French (1993) three-factor model on eligible stocks listed in NYSE, NASDAQ and AMEX for the period between July 2011 to December 2018. Data on monthly stock returns, monthly 1-month T-bill yields and annual company fundamentals were obtained for the specified period in order to replicate the study. The monthly excess returns suggest that larger-sized companies (i.e. Big-sized) have higher excess returns than portfolios containing smaller sized firms on an average. On the other hand, portfolio constructed of low book-to-market ratio firms look to perform better than those constructed of high book-to-market ratio firms. Quintiles, i.e. twenty-five portfolios, are constructed in accordance to size and book-to-market ratio to help explain the variations on excess portfolio returns by using market risk factor, size risk factor and book-to-market ratio risk factors. After conducting some analysis and statistical tests, we have arrived at the conclusion that size factor has no effect on portfolios of big-size firms but can explain the excess return variations on portfolios of small and medium-sized firms. On the other hand, book-to-market ratio factor has an effect on portfolios of high book-to-market ratio firms. Therefore, we have concluded that Fama French model only has explanatory power over portfolios of several characteristics, but do not help to explain the whole market as a whole during the period spanning from Jul 2011 – Dec 2018.
+		This paper outlines the results of a validity test we have conducted on the Fama and French (1993) three-factor model on eligible stocks listed in NYSE, NASDAQ and AMEX for the period between July 2011 to December 2018. Data on monthly stock returns, monthly 1-month T-bill yields and annual company fundamentals were obtained for the specified period in order to replicate the study. The monthly excess returns suggest that larger-sized companies (i.e. Big-sized) have higher excess returns than portfolios containing smaller sized firms on an average. On the other hand, portfolio constructed of low book-to-market ratio firms look to perform better than those constructed of high book-to-market ratio firms. Quintiles, i.e. twenty-five portfolios, are constructed in accordance to size and book-to-market ratio to help explain the variations on excess portfolio returns by using market risk factor, size risk factor and book-to-market ratio risk factors. After conducting analysis and several statistical tests, we have arrived at the conclusion that Fama and French (1993) three-factor model does display explanatory power over the quintiles given the R-squared and AIC (Akaike information criterion, results shown at Section 6, even though a few quintiles, i.e.  Big-sized with Book-to-Market equity (ranked from 2-4) and Low Book-to-Market equity (ranked at 2) quintiles, proved that the coefficients of the SMB and HML might be statistically insignificant respectively from the derived t-statistics value at 95\% significance level.
 	
 	
 	\section{Introduction \& Literature Review} % Numbered section
@@ -191,10 +191,11 @@ Fama and French explained size and BE/ME are not ad hoc variables for explaining
 
 
 	\section{Conclusion} % Numbered section
-In conclusion, we have accomplished our research objective to prove that Fama and French three-factors model does not significantly explain the returns of stocks listed on the NYSE, NASDAQ and AMEX for the period between Jul 2011 – Dec 2018. Together with the market data collected from various sources and statistical significance tests performed, all quintiles, except for Big-Sized portfolios and Low Book-to-Market quintiles, are able to base on this model to explain their returns as seen in the high t-stat values results derived. Size factor, i.e. SMB, proves to be ineffective on Big-Sized portfolios, and the intuition, according to Fama and French, is that the small-cap companies tend to see higher returns than large-cap companies in the long run. On the other hand, Book-to-Market factor, i.e. HML, is found to have no effect on Low Book-to-Market quintiles, in which the intuition is that value companies (high book-to-market ratio) enjoy higher returns than growth companies (low book-to-market ratio) in the long run. Lastly, market risk factor seems to suggest as a significant factor for portfolio returns of all quintiles. Therefore, we can deduce that Fama and French three factor model does have some explanatory power over certain quintiles of certain characteristics but does not explain well for the whole market. \\
+	\noindent In conclusion, we have accomplished our research objective to prove that Fama and French three-factors model does significantly explain the returns of stocks listed on the NYSE, NASDAQ and AMEX for the period between Jul 2011 – Dec 2018. Together with the observed market data and collected statistical significance results, all quintiles, except for certain Big-Sized portfolios and Low Book-to-Market quintiles, produce high t-stat values results which means the coefficients are statistically significant, and this is coherent to Fama and French (1993).  Beyond beta, Fama and French found that small-sized companies often gained higher returns than those of larger-sized companies, while value stocks (Low Book-to-Market equity) gained higher returns than those associated with growth stocks (High Book-to-Market equity). The intuition is that higher compensation is necessary for riskier investments, which results in higher earnings potential. Another intuition is that smaller companies attract less attention and are more likely to be mispriced.\\
+	
+	\noindent Evident in the Fama and French (1996) paper, the intercepts are strongly negative for short-term-losers and strongly positive for short-term winners for the observed period from t-2 to t-12 months. This therefore highlights the fact that the original three-factor model fails to capture the short-term momentum anomalies, in which set forth Cahart’s research in incorporating momentum into the original Fama and French three-factor model. Lately, research has also further spurred the development of other risk factors, such as liquidity, investment, and profitability factors (Pastor and Stambaugh,
+	2003; Fama and French, 2015; Hou, Xue, and Zhang, 2015), to be incorporated into the model to further improve the explanatory power of the models and formulate trading strategies; However, factor models might vary in different markets, and one therefore has to be prudent in the same factor model application across different markets. \\
 
-
-\noindent In recent times, research has also further encouraged the development of other risk factors such as low-volatility, and momentum risk factors; In order to fit and explain the quintiles better in the future, we could add in more non-collinear risk factors into the original to help explain the returns of the quintiles better going forward. Several statistical techniques can be applied to accomplish that, and machine learning can also help to the discovery of new risk factors as well. All these approaches would allow us to a construct a model to help explain these better, and would be help in future studies.\\
 
 	\section{References} % Numbered section
 	\begin{itemize}
@@ -213,6 +214,10 @@ In conclusion, we have accomplished our research objective to prove that Fama an
 		\item Basu. Sanjoy. 1983. The relationship between earnings yield. market value. and return for NYSE common stocks: Further evidence. Journal of Financial Economics 12, 129-156.
 		\item Daniel, K., \& Titman, S. (1997). Evidence on the characteristics of cross sectional variation in stock returns
 		\item Davis, J., Fama, E.,\& French, K. (2000). Characteristics, covariances and average returns: 1927-97. Journal of Finance, 55(1), 389-406
+		\item Fama. Eugene F. and Kenneth R. French. 1996. Multifactor Explanations of Asset Pricing Anomalies. Journal of Finance, 51(1), 55--84
+		\item Pastor, L., Stambaugh, R.F., 2003. Liquidity risk and expected stock returns. Journal of Political Economy 111, 642–685.
+		\item A five-factor asset pricing model. Journal of Financial Economics 116, 1–22.
+		\item Hou, K., Xue, C., Zhang, L., 2015. Digesting anomalies: An investment approach. Review of Financial Studies 28, 650–705.
 	\end{itemize}
 
 
