--- a/Report/report_v3_1.tex
+++ b/Report/report_v3_1.tex
@@ -110,16 +110,15 @@ After the construction of SMB and HML portfolios for independent regression vari
 	\item Computational Cost: Takes hours to compute several million cells due to hardware limitations
 \end{itemize}
 \section{Summary of Statistics}
-\subsection{The explanatory variables}
+\textbf{The explanatory variables}
 
-The table below gives mean, standard deviation and test statistics for the three explanatory variables. The mean of market risk premium, 0.82\%, which implies 9.84\% on the annual basis, is much higher than what Fama and French reported (0.43\%) for their test period during 1963-1991. Both SMB and HML surprisingly turn negative with t-test suggests SMB is statistically significant from 0 with 95\% confidence level. In other words, small cap portfolios underperform large cap portfolios, high BE/ME portfolios no longer outperform low BE/ME portfolios. These are huge paradigm shift from Fama and French’s observation.
+The table below gives mean, standard deviation and test statistics for the three explanatory variables. The mean of market risk premium, 0.82\%, which implies 9.84\% on the annual basis, is much higher than what Fama and French reported (0.43\%) for their test period during 1963-1991. Neither SMB nor HML are as significant as market risk premium given their higher p-values. This suggests returns of small caps minus large cap and returns of high BE/ME minus low BE/ME are indifferent from 0.
 
-%\includegraphics[scale=0.6]{1.JPG}
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.5\linewidth]{1.JPG}
-	\caption*{Table 1}
+	\caption*{Table 1: Stats of Explanatory Variables}
+	\includegraphics[width=0.5\linewidth]{A1.png}
 	\label{fig:label}
 \end{figure}
 
