--- a/Report/report_v4.tex
+++ b/Report/report_v4.tex
@@ -133,7 +133,7 @@ After the construction of SMB and HML portfolios for independent regression vari
 \end{figure}
 
 
-\subsection{The dependent variables}   
+\textbf{The dependent variables}   
 
 Table below lists average of annual number of firms in each portfolio. 61.7\% of firms lie in the union of smallest cap quintile and lowest BE/ME quintiles (as highlighted).
 
@@ -187,7 +187,7 @@ Fama and French explained size and BE/ME are not ad hoc variables for explaining
 
 \noindent Market efficiency seems to explain this more logically. Intuition comes as: in old days such as 1963-1991, it was not easy for investors to access to or liquidate small-cap stocks. In addition, small firms normally have higher cost of capital and greater business risk. All of these made small-cap stocks riskier to invest, hence higher return in old days. On the other hand, it is much easier for investors to access to small-cap stocks and liquidate nowadays. More transparent market also reduces risk of investing in small firms. These could explain why small cap stocks does not outperform large cap stocks as they used to be.
 
-\noindent We are still able to see News nowadays saying samll cap's outperformance tendency exists. This is not true for US equities tested between 2011-2018 in this paper. Flaw of these News was their neglect of "Survivorship Bias". According to Elton, Gruber, and Blake (1996), survivorship bias is larger in the small-fund sector than in large mutual funds. Small caps are easier to go bankrupcy and being excluded from analysis. 
+\noindent We are still able to see News nowadays saying small cap's outperformance tendency exists. This is not true for US equities tested between 2011-2018 in this paper. Flaw of these News was their neglect of "Survivorship Bias". According to Elton, Gruber, and Blake (1996), survivorship bias is larger in the small-fund sector than in large mutual funds. Small caps are easier to go bankrupcy and being excluded from analysis. 
 
 
 	\section{Conclusion} % Numbered section
